fix: hidden drawer visibility condition

--- a/src/app-layout/visual-refresh-toolbar/drawer/styles.scss
+++ b/src/app-layout/visual-refresh-toolbar/drawer/styles.scss
@@ -49,10 +49,8 @@
 
   &.drawer-global {
     @include mobile-only {
-      display: none;
-
-      &.last-opened {
-        display: grid;
+      &:not(.last-opened) {
+        display: none;
       }
     }
   }
